# advent-of-code-2021

./: .gitignore  Cargo.toml
.github/workflows/: integration.yml
day-01/: Cargo.toml
day-01/benches/: bench.rs
day-01/src/: lib.rs  main.rs
day-02/: Cargo.toml
day-02/benches/: bench.rs
day-02/src/: command.rs  lib.rs  main.rs  position.rs
day-03/: Cargo.toml
day-03/benches/: bench.rs
day-03/src/: lib.rs  main.rs  power_report.rs
day-04/: Cargo.toml
day-04/benches/: bench.rs
day-04/src/: bingo.rs  lib.rs  main.rs
day-05/: Cargo.toml
day-05/benches/: bench.rs
day-05/src/: lib.rs  line.rs  main.rs  pos.rs
day-06/: Cargo.toml
day-06/benches/: bench.rs
day-06/src/: lib.rs  main.rs
day-07/: Cargo.toml
day-07/benches/: bench.rs
day-07/src/: lib.rs  main.rs
day-08/: Cargo.toml
day-08/benches/: bench.rs
day-08/src/: lib.rs  main.rs  segment_display.rs  swap_remove_pred.rs
day-09/: Cargo.toml
day-09/benches/: bench.rs
day-09/src/: lib.rs  main.rs
day-10/: Cargo.toml
day-10/benches/: bench.rs
day-10/src/: bracket.rs  lib.rs  main.rs
day-11/: Cargo.toml
day-11/benches/: bench.rs
day-11/src/: lib.rs  main.rs
day-12/: Cargo.toml
day-12/benches/: bench.rs
day-12/src/: cave_system.rs  lib.rs  main.rs
day-13/: Cargo.toml
day-13/benches/: bench.rs
day-14/: Cargo.toml
day-15/: Cargo.toml
day-16/: Cargo.toml
day-17/: Cargo.toml
day-17/benches/: bench.rs
day-17/src/: lib.rs  main.rs  target.rs
day-18/: Cargo.toml
day-20/: Cargo.toml
day-21/: Cargo.toml
day-25/: Cargo.toml
template/: Cargo.toml
(+36 files in other folders)
